<resources>
    <string name="app_name">씨네마 천국 🎥</string>
    <string name="write_review">한줄평 작성</string>
    <string name="show_review">모든 한줄평</string>
    <string name="bookingRate">예매율</string>
    <string name="film_list">영화 목록</string>
    <string name="avgRating">평점</string>
    <string name="accumulatedCount">누적관객수</string>
    <string name="plot">줄거리</string>
    <string name="review">한줄평</string>
    <string name="directorAndActor">감독/출연</string>
    <string name="director">감독</string>
    <string name="actor">출연</string>
    <string name="booking">예매하기</string>
    <string name="showAll">모두 보기</string>
    <string name="writeReview">작성하기</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
