<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMainBlue"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layoutBriefInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/ivPoster"
                app:layout_constraintStart_toEndOf="@+id/ivPoster">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/tvDateReleased">

                    <TextView
                        android:id="@+id/tvTitle"
                        style="@style/customTextView"
                        android:text="군도"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ivRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/ic_15" />
                </LinearLayout>


                <TextView
                    android:id="@+id/tvDateReleased"
                    style="@style/customTextView"
                    android:text="2014.07.23 개봉"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvGenre"
                        style="@style/customTextView"
                        android:text="액션"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvRuntime"
                        style="@style/customTextView"
                        android:text="/ 137분"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutThumbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/ivThumbUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_thumb_up" />

                    <TextView
                        android:id="@+id/tvThumbUp"
                        style="@style/customTextView"
                        android:layout_marginLeft="5dp"
                        android:text="0"
                        android:inputType="numberDecimal"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ivThumbDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/ic_thumb_down" />

                    <TextView
                        android:id="@+id/tvThumbDown"
                        style="@style/customTextView"
                        android:layout_marginLeft="5dp"
                        android:text="0"
                        android:inputType="numberDecimal"
                        android:textSize="25dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/filmPerformance">

                <TextView
                    android:id="@+id/tvBookingRateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bookingRate"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/tvBookingRateTitle"
                    app:layout_constraintStart_toStartOf="@id/tvBookingRateTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvBookingRateTitle">

                    <TextView
                        android:id="@+id/tvBookingRank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="5위"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvBookingRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1.8%"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                style="@style/divider"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/filmPerformance">

                <TextView
                    android:id="@+id/tvAvgRatingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/avgRating"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/tvAvgRatingTitle"
                    app:layout_constraintStart_toStartOf="@id/tvAvgRatingTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvAvgRatingTitle">

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:numStars="10"
                        android:rating="8.2"/>

                    <TextView
                        android:id="@+id/tvAvgRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8.2"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                style="@style/divider"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/filmPerformance">

                <TextView
                    android:id="@+id/tvAccumulatedCountTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accumulatedCount"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvAccumulatedCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvAccumulatedCountTitle"
                    android:text="839,399"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAccumulatedCountTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <TextView
            style="@style/titleText"
            android:text="@string/plot"/>

        <TextView
            android:id="@+id/tvPlot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:background="#ffffff"
            android:inputType="textMultiLine"
            android:padding="15dp"
            android:text="줄거리"
            android:textSize="18sp"/>

        <TextView
            style="@style/titleText"
            android:text="@string/directorAndActor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:paddingLeft="5dp"
                android:text="@string/director"
                android:textColor="#000000"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tvDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="윤종빈"
                android:textSize="18sp"/>
       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:paddingLeft="5dp"
                android:text="@string/actor"
                android:textColor="#000000"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tvActors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="하정우(도치), 강동원(조윤)"
                android:textSize="18sp" />
        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff">

            <TextView
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:text="@string/review"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/writeReview"
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_review_selected"/>

                <TextView
                    style="@style/largeTextSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/writeReview"
                    android:textColor="#FB3E17"
                    android:textStyle="bold"/>

            </LinearLayout>

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/btnShowAll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/writeReview" />

            <Button
                android:id="@+id/btnShowAll"
                style="@style/largeTextSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/transparent_bg_bordered"
                android:text="@string/showAll"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            style="@style/titleText"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_facebook"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_kakao"/>

            <Button
                style="@style/largeTextSize"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FB3E17"
                android:text="@string/booking"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_weight="1"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>